--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ header {
 h1 {
   font-family: "Great Vibes", cursive;
   font-size: 33px;
-  color: #3493d5;
+  color: #0763a5;
   margin: 30px 0;
 }
 
 h2 {
   font-family: "Great Vibes", cursive;
   font-size: 27px;
-  color: #3493d5;
+  color: #0763a5;
   margin: 10px 0;
   padding-top: 50px;
 }
@@ -38,7 +38,7 @@ h2 {
 h3 {
   font-family: "Great Vibes", cursive;
   font-size: 18px;
-  color: grey;
+  color: #3493d5;
   margin: 10px 0;
 }
 
@@ -73,4 +73,9 @@ li {
   height: 260px;
   border-radius: 8px;
   margin: 80px 0;
+}
+
+#thanks {
+  color: rgb(233, 52, 52);
+  margin: 90px 0;
 }
